Added almost everything

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,21 @@
     <string name="restore_purchase">Restore purchase</string>
     <string name="help">Help</string>
     <string name="log_out">Log out</string>
+    <string name="trade_by_bata"><font weght='700'>Trade by <font color='#4E55D7'>bata</font></font></string>
+    <string name="location">Location</string>
+    <string name="what_are_you_looking_for">What are you looking for?</string>
+    <string name="latest">Latest</string>
+    <string name="view_all">View all</string>
+    <string name="flash_sale">Flash sale</string>
+    <string name="favorites">Favorites</string>
+    <string name="cart">Cart</string>
+    <string name="comment">Comment</string>
+    <string name="discount_value">%d\0025 off</string>
+    <string name="error_empty_first_name">First name is empty!</string>
+    <string name="error_empty_email">Email is empty!</string>
+    <string name="error_invalid_email">Email is invalid!</string>
+    <string name="error_unknown">Unknown error</string>
+    <string name="error_user_already_exists">User with name \"%1s\" already exists.</string>
+    <string name="error_user_not_found">User with name \"%1s\" not found. </string>
+    <string name="password">password</string>
 </resources>
