--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,12 +30,18 @@
     <string name="favorites">Favorites</string>
     <string name="cart">Cart</string>
     <string name="comment">Comment</string>
-    <string name="discount_value">%d\0025 off</string>
+    <string name="discount_value">%d%% off</string>
+    <string name="password">password</string>
+    <string name="color">Color:</string>
+    <string name="quantity">Quantity:</string>
+    <string name="add_to_cart">Add to cart</string>
+    <string name="reviews_amount">(%1d reviews)</string>
+    <string name="price_value">$ %1$.2f</string>
+
     <string name="error_empty_first_name">First name is empty!</string>
     <string name="error_empty_email">Email is empty!</string>
     <string name="error_invalid_email">Email is invalid!</string>
     <string name="error_unknown">Unknown error</string>
     <string name="error_user_already_exists">User with name \"%1s\" already exists.</string>
     <string name="error_user_not_found">User with name \"%1s\" not found. </string>
-    <string name="password">password</string>
 </resources>
